added pixel downsampling to speed training; improved visualization

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -25,11 +25,10 @@
         "\n",
         "* DO_MASK : Set to True if mask is to be applied while training\n",
         "* SET_VARIANCE : Set to True if variance is to be trained in loss function\n",
+        "* PIXEL_DOWNSAMPLE : How much to scale down each axis. In other words, mm per pixel/voxel\n",
         "\n",
         "* max_epochs\n",
-        "* val_interval : how frequently the validation code should be run\n",
-        "* train_data_ratio : ratio of total data (484) to be used for training\n",
-        "* val_data_ratio : ratio of total data (484) to be used for validating"
+        "* val_interval : how frequently the validation code should be run"
       ]
     },
     {
@@ -40,20 +39,18 @@
       "source": [
         "run_id = 8\n",
         "DO_MASK = False\n",
-        "SET_VARIANCE = True\n",
-        "max_epochs = 100\n",
-        "val_interval = 1\n",
-        "train_data_ratio = 0.5\n",
-        "val_data_ratio = 0.1\n",
+        "SET_VARIANCE = False\n",
+        "PIXEL_DOWNSAMPLE = [4, 4, 4]\n",
+        "max_epochs = 2000\n",
+        "val_interval = 10\n",
         "RANDOM_SEED = 0\n",
         "\n",
         "print(\"run_id: \", run_id)\n",
         "print(\"DO_MASK: \", DO_MASK)\n",
         "print(\"SET_VARIANCE: \", SET_VARIANCE)\n",
+        "print(\"PIXEL_DOWNSAMPLE: \", PIXEL_DOWNSAMPLE)\n",
         "print(\"max_epochs: \", max_epochs)\n",
         "print(\"val_interval: \", val_interval)\n",
-        "print(\"train_data_ratio: \", train_data_ratio)\n",
-        "print(\"val_data_ratio: \", val_data_ratio)\n",
         "print(\"RANDOM_SEED: \", RANDOM_SEED)"
       ]
     },
@@ -172,8 +169,7 @@
         "import os\n",
         "import torch\n",
         "import torch.nn as nn\n",
-        "from torch.utils.data import Dataset\n",
-        "from torch.utils.data import DataLoader, Subset\n",
+        "from torch.utils.data import Dataset, DataLoader, random_split\n",
         "import numpy as np\n",
         "import json\n",
         "\n",
@@ -279,6 +275,9 @@
       },
       "outputs": [],
       "source": [
+        "crop_size = [224, 224, 144]\n",
+        "resize_size = [crop_size[i]//PIXEL_DOWNSAMPLE[i] for i in range(len(crop_size))]\n",
+        "\n",
         "train_transform = Compose(\n",
         "    [\n",
         "        # load 4 Nifti images and stack them together\n",
@@ -290,8 +289,8 @@
         "            pixdim=(1.0, 1.0, 1.0),\n",
         "            mode=(\"bilinear\", \"nearest\"),\n",
         "        ),\n",
-        "        RandSpatialCrop(roi_size=[224, 224, 144], random_size=False),\n",
-        "        Resize(spatial_size=(56, 56, 36)),\n",
+        "        RandSpatialCrop(roi_size=crop_size, random_size=False),\n",
+        "        Resize(spatial_size=resize_size),\n",
         "        RandFlip(prob=0.5, spatial_axis=0),\n",
         "        RandFlip(prob=0.5, spatial_axis=1),\n",
         "        RandFlip(prob=0.5, spatial_axis=2),\n",
@@ -300,6 +299,7 @@
         "        RandShiftIntensity(offsets=0.1, prob=1.0),\n",
         "    ]\n",
         ")\n",
+        "\n",
         "val_transform = Compose(\n",
         "    [\n",
         "        LoadImage(),\n",
@@ -310,7 +310,7 @@
         "            pixdim=(1.0, 1.0, 1.0),\n",
         "            mode=(\"bilinear\", \"nearest\"),\n",
         "        ),\n",
-        "        Resize(spatial_size=(56, 56, 36)),\n",
+        "        Resize(spatial_size=resize_size),\n",
         "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
         "    ]\n",
         ")"
@@ -383,15 +383,7 @@
         "\n",
         "        mask = torch.from_numpy(mask)\n",
         "\n",
-        "        return {\"image\":image, \"mask\":mask}\n",
-        "    \n",
-        "\n",
-        "\n",
-        "sample_ds = BrainMRIDataset(\n",
-        "    root_dir=root_dir,\n",
-        "    transform=train_transform\n",
-        ")\n",
-        "sample_loader = DataLoader(sample_ds, batch_size=2, shuffle=True, num_workers=4)"
+        "        return {\"image\":image, \"mask\":mask}"
       ]
     },
     {
@@ -400,7 +392,7 @@
         "id": "7dhVJ9qbVbGR"
       },
       "source": [
-        "Consider a subset of train and validation dataset for debugging the training workflow"
+        "Create training and validation dataset"
       ]
     },
     {
@@ -411,11 +403,25 @@
       },
       "outputs": [],
       "source": [
-        "train_subs = Subset(sample_ds, list(range(int(train_data_ratio * len(sample_ds)))))\n",
-        "val_subs = Subset(sample_ds, list(range(int(val_data_ratio* len(sample_ds)))))\n",
+        "all_dataset = BrainMRIDataset(\n",
+        "    root_dir=root_dir\n",
+        ")\n",
         "\n",
-        "train_loader = DataLoader(train_subs, batch_size=1, shuffle=True, num_workers=2)\n",
-        "val_loader = DataLoader(val_subs, batch_size=1, shuffle=False, num_workers=2)\n",
+        "# Define the split sizes\n",
+        "train_size = int(0.8 * len(all_dataset))\n",
+        "val_size = len(all_dataset) - train_size\n",
+        "split_sizes = [train_size, val_size]\n",
+        "\n",
+        "# Split the dataset\n",
+        "train_dataset, val_dataset = random_split(all_dataset, split_sizes)\n",
+        "\n",
+        "train_dataset.dataset.transform = train_transform\n",
+        "val_dataset.dataset.transform = val_transform\n",
+        "\n",
+        "# Create data loaders\n",
+        "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=8, shuffle=False)\n",
+        "\n",
         "print(len(train_loader), len(val_loader))"
       ]
     },
@@ -425,10 +431,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# temp code:\n",
-        "# change resolution of image from 1mm3 to 4mm3\n",
-        "val_data_example = sample_ds[6]\n",
-        "print(f\"image shape: {val_data_example['image'].shape}\")"
+        "# temp code\n",
+        "print(\"train\")\n",
+        "print(len(train_dataset))\n",
+        "print(train_loader.batch_size)\n",
+        "print(len(train_dataset) // train_loader.batch_size)\n",
+        "print(\"val\")\n",
+        "print(len(val_dataset))\n",
+        "print(val_loader.batch_size)"
       ]
     },
     {
@@ -451,13 +461,17 @@
         "# pick one image from DecathlonDataset to visualize and check the 4 channels\n",
         "if is_notebook():\n",
         "    channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
-        "    val_data_example = sample_ds[6]\n",
-        "    print(f\"image shape: {val_data_example['image'].shape}\")\n",
+        "    val_data_example = val_dataset[6]['image']\n",
+        "    _, im_length, im_width, im_height = val_data_example.shape\n",
+        "    print(f\"image shape: {val_data_example.shape}\")\n",
         "    plt.figure(\"image\", (24, 6))\n",
         "    for i in range(4):\n",
         "        plt.subplot(1, 4, i + 1)\n",
         "        plt.title(channels[i], fontsize=30)\n",
-        "        plt.imshow(val_data_example[\"image\"][i, :, :, 18].detach().cpu().T, cmap=\"gray\")\n",
+        "        brain_slice = val_data_example[i, :, :, im_height//2].detach().cpu().T\n",
+        "        plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
+        "        plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
+        "        plt.imshow(brain_slice, cmap=\"gray\")\n",
         "        cbar = plt.colorbar()\n",
         "        cbar.ax.tick_params(labelsize=20)\n",
         "    plt.show()"
@@ -506,6 +520,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Calculate and display the total number of parameters\n",
+        "def count_parameters(model):\n",
+        "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+        "\n",
+        "total_params = count_parameters(model)\n",
+        "print(f\"Total number of trainable parameters: {total_params}\")\n",
+        "\n",
+        "# Print the model architecture\n",
+        "print(\"Model Architecture:\\n\", model)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "def GaussianLikelihood(expected_img, output_img):\n",
         "    # input is 4 channel images, output is 8 channel images\n",
         "\n",
@@ -516,7 +547,6 @@
         "        output_img_log_std = torch.zeros_like(output_img[:, 4:, ...]) # sigma = 1\n",
         "\n",
         "    cost1 = (expected_img - output_img_mean)**2 / (2*torch.exp(2*output_img_log_std))\n",
-        "\n",
         "    cost2 = output_img_log_std\n",
         "\n",
         "    return torch.mean(cost1 + cost2)"
@@ -607,7 +637,7 @@
         "        scaler.update()\n",
         "        epoch_loss += loss.item()\n",
         "        print(\n",
-        "            f\"{step}/{len(train_subs) // train_loader.batch_size}\"\n",
+        "            f\"{step}/{len(train_loader)}\"\n",
         "            f\", train_loss: {loss.item():.4f}\"\n",
         "            f\", step time: {(time.time() - step_start):.4f}\"\n",
         "        )\n",
@@ -625,7 +655,7 @@
         "                    batch_data[\"mask\"].to(device),\n",
         "                )\n",
         "                val_outputs_gt = val_inputs.clone()\n",
-        "                val_inputs = val_inputs*~mask[:,:,None,None,None]\n",
+        "                val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
         "                val_outputs = inference(val_inputs)\n",
         "                val_outputs = val_outputs[:,:4,...]\n",
         "                # val_outputs = [post_trans(i) for i in val_outputs]\n",
