--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 5 # set this to prevent overlapped saving of model and data"
+    "run_id = 8 # set this to prevent overlapped saving of model and data"
    ]
   },
   {
@@ -317,7 +317,8 @@
     "def plot_brain(index, label):\n",
     "    start_index = None\n",
     "    title = \"\"\n",
-    "    h_index = 75\n",
+    "    _, _, im_length, im_width, im_height = val_input.shape\n",
+    "    h_index = im_height//2\n",
     "\n",
     "    if label == \"input\":\n",
     "        start_index = 0\n",
@@ -334,13 +335,13 @@
     "    plt.subplot(3, 4, start_index + index + 1)\n",
     "    if label == \"input\":\n",
     "        plt.title(channels[i], fontsize=30)\n",
-    "    brain_slice = brain_slice.detach().cpu().T # .flip(0)\n",
+    "    brain_slice = brain_slice.detach().cpu().T\n",
     "    plt.imshow(brain_slice, cmap=\"gray\")\n",
     "    plt.xlabel('')\n",
     "    if i == 0:\n",
     "        plt.ylabel(title, fontsize=30)\n",
-    "    plt.gca().xaxis.set_ticks([])\n",
-    "    plt.gca().yaxis.set_ticks([])\n",
+    "    plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
+    "    plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
     "    cbar = plt.colorbar()\n",
     "    cbar.ax.tick_params(labelsize=20)\n",
     "\n",
