--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -16,6 +16,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from logger import Logger\n",
+        "logger = Logger(log_level='DEBUG')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -28,7 +38,8 @@
         "* PIXEL_DOWNSAMPLE : How much to scale down each axis. In other words, mm per pixel/voxel\n",
         "\n",
         "* max_epochs\n",
-        "* val_interval : how frequently the validation code should be run"
+        "* val_interval : how frequently the validation code should be run\n",
+        "* TRAIN_RATIO: proportion of total dataset to be used for training. Rest will be used for validating"
       ]
     },
     {
@@ -37,21 +48,27 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 8\n",
+        "run_id = 1\n",
         "DO_MASK = False\n",
         "SET_VARIANCE = False\n",
         "PIXEL_DOWNSAMPLE = [4, 4, 4]\n",
-        "max_epochs = 2000\n",
+        "max_epochs = 400\n",
         "val_interval = 10\n",
+        "TRAIN_RATIO = 0.8\n",
         "RANDOM_SEED = 0\n",
+        "root_dir = \"/scratch1/sachinsa/monai_data_1\"\n",
+        "use_sample = True\n",
         "\n",
-        "print(\"run_id: \", run_id)\n",
-        "print(\"DO_MASK: \", DO_MASK)\n",
-        "print(\"SET_VARIANCE: \", SET_VARIANCE)\n",
-        "print(\"PIXEL_DOWNSAMPLE: \", PIXEL_DOWNSAMPLE)\n",
-        "print(\"max_epochs: \", max_epochs)\n",
-        "print(\"val_interval: \", val_interval)\n",
-        "print(\"RANDOM_SEED: \", RANDOM_SEED)"
+        "logger.info(\"PARAMETERS\\n-----------------\")\n",
+        "logger.info(f\"run_id: {run_id}\")\n",
+        "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
+        "logger.info(f\"SET_VARIANCE: {SET_VARIANCE}\")\n",
+        "logger.info(f\"PIXEL_DOWNSAMPLE: {PIXEL_DOWNSAMPLE}\")\n",
+        "logger.info(f\"max_epochs: {max_epochs}\")\n",
+        "logger.info(f\"val_interval: {val_interval}\")\n",
+        "logger.info(f\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
+        "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
+        "logger.info(f\"Root dir: {root_dir}\\n\")"
       ]
     },
     {
@@ -81,9 +98,9 @@
         "\n",
         "# Example usage\n",
         "if is_notebook():\n",
-        "    print(\"This is a Jupyter Notebook.\")\n",
+        "    logger.debug(\"This is a Jupyter Notebook.\")\n",
         "else:\n",
-        "    print(\"This is a Python script (not a Jupyter Notebook).\")"
+        "    logger.debug(\"This is a Python script (not a Jupyter Notebook).\")"
       ]
     },
     {
@@ -108,10 +125,10 @@
       },
       "outputs": [],
       "source": [
-        "if is_notebook():\n",
-        "    !python -c \"import monai\" || pip install -q \"monai-weekly[nibabel, tqdm]\"\n",
-        "    !python -c \"import matplotlib\" || pip install -q matplotlib\n",
-        "    %matplotlib inline"
+        "# if is_notebook():\n",
+        "#     get_ipython().system('python -c \"import monai\" || pip install -q \"monai-weekly[nibabel, tqdm]\"')\n",
+        "#     get_ipython().system('python -c \"import matplotlib\" || pip install -q matplotlib')\n",
+        "#     get_ipython().run_line_magic('matplotlib', 'inline')"
       ]
     },
     {
@@ -157,6 +174,7 @@
         "    RandScaleIntensity,\n",
         "    RandShiftIntensity,\n",
         "    RandSpatialCrop,\n",
+        "    CenterSpatialCrop,\n",
         "    Spacing,\n",
         "    EnsureType,\n",
         "    EnsureChannelFirst,\n",
@@ -201,27 +219,12 @@
       },
       "outputs": [],
       "source": [
-        "os.environ[\"MONAI_DATA_DIRECTORY\"] = \"/scratch1/sachinsa/monai_data_1\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c01pTrquKX7Q",
-        "outputId": "e9781d95-fd2e-412b-9e3e-8269aa8633e4",
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
+        "os.environ[\"MONAI_DATA_DIRECTORY\"] = root_dir\n",
         "directory = os.environ.get(\"MONAI_DATA_DIRECTORY\")\n",
         "if directory is not None:\n",
         "    os.makedirs(directory, exist_ok=True)\n",
         "root_dir = tempfile.mkdtemp() if directory is None else directory\n",
-        "print(root_dir)"
+        "logger.debug(f\"Root dir: {root_dir}\")"
       ]
     },
     {
@@ -232,7 +235,7 @@
       "source": [
         "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
         "if os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
-        "    print(f\"{save_dir} already exists. Avoid overwrite by updating run_id.\")\n",
+        "    logger.warning(f\"{save_dir} already exists. Avoid overwrite by updating run_id.\")\n",
         "    exit()\n",
         "else:\n",
         "    os.makedirs(save_dir, exist_ok=True)"
@@ -244,7 +247,7 @@
         "id": "kXLaSctjKX7Q"
       },
       "source": [
-        "## Set deterministic training for reproducibility"
+        "### Set deterministic training for reproducibility"
       ]
     },
     {
@@ -310,6 +313,7 @@
         "            pixdim=(1.0, 1.0, 1.0),\n",
         "            mode=(\"bilinear\", \"nearest\"),\n",
         "        ),\n",
+        "        CenterSpatialCrop(roi_size=crop_size), # added this because model was not handling 155dims\n",
         "        Resize(spatial_size=resize_size),\n",
         "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
         "    ]\n",
@@ -403,42 +407,34 @@
       },
       "outputs": [],
       "source": [
+        "from torch.utils.data import Subset\n",
+        "\n",
         "all_dataset = BrainMRIDataset(\n",
         "    root_dir=root_dir\n",
         ")\n",
         "\n",
-        "# Define the split sizes\n",
-        "train_size = int(0.8 * len(all_dataset))\n",
-        "val_size = len(all_dataset) - train_size\n",
-        "split_sizes = [train_size, val_size]\n",
-        "\n",
         "# Split the dataset\n",
-        "train_dataset, val_dataset = random_split(all_dataset, split_sizes)\n",
+        "train_dataset, val_dataset = random_split(all_dataset, [TRAIN_RATIO, 1-TRAIN_RATIO],\n",
+        "                                          generator=torch.Generator().manual_seed(RANDOM_SEED))\n",
         "\n",
         "train_dataset.dataset.transform = train_transform\n",
         "val_dataset.dataset.transform = val_transform\n",
         "\n",
-        "# Create data loaders\n",
-        "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
-        "val_loader = DataLoader(val_dataset, batch_size=8, shuffle=False)\n",
+        "if use_sample:\n",
+        "    train_dataset = Subset(train_dataset, list(range(20)))\n",
+        "    val_dataset = Subset(train_dataset, list(range(5)))\n",
         "\n",
-        "print(len(train_loader), len(val_loader))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# temp code\n",
-        "print(\"train\")\n",
-        "print(len(train_dataset))\n",
-        "print(train_loader.batch_size)\n",
-        "print(len(train_dataset) // train_loader.batch_size)\n",
-        "print(\"val\")\n",
-        "print(len(val_dataset))\n",
-        "print(val_loader.batch_size)"
+        "logger.debug(\"Data loading...\")\n",
+        "\n",
+        "# Create data loaders\n",
+        "BATCHSIZE_TRAIN, BATCHSIZE_VAL = 4, 2\n",
+        "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False)\n",
+        "\n",
+        "logger.debug(\"Data loaded\")\n",
+        "logger.debug(f\"Length of dataset: {len(train_dataset)}, {len(val_dataset)}\")\n",
+        "logger.debug(f\"Batch-size: {BATCHSIZE_TRAIN}, {BATCHSIZE_VAL}\")\n",
+        "logger.debug(f\"Length of data-loaders: {len(train_loader)}, {len(val_loader)}\")"
       ]
     },
     {
@@ -463,7 +459,7 @@
         "    channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
         "    val_data_example = val_dataset[6]['image']\n",
         "    _, im_length, im_width, im_height = val_data_example.shape\n",
-        "    print(f\"image shape: {val_data_example.shape}\")\n",
+        "    logger.debug(f\"image shape: {val_data_example.shape}\")\n",
         "    plt.figure(\"image\", (24, 6))\n",
         "    for i in range(4):\n",
         "        plt.subplot(1, 4, i + 1)\n",
@@ -511,7 +507,8 @@
         "    channels=(4, 8, 16),\n",
         "    strides=(2, 2),\n",
         "    num_res_units=2\n",
-        ").to(device)"
+        ").to(device)\n",
+        "logger.debug(\"Model defined\")"
       ]
     },
     {
@@ -525,10 +522,17 @@
         "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "\n",
         "total_params = count_parameters(model)\n",
-        "print(f\"Total number of trainable parameters: {total_params}\")\n",
+        "logger.debug(f\"Total number of trainable parameters: {total_params}\")\n",
         "\n",
         "# Print the model architecture\n",
-        "print(\"Model Architecture:\\n\", model)"
+        "logger.debug(f\"Model Architecture:\\n {model}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define Loss (Guassian Likelihood)"
       ]
     },
     {
@@ -580,14 +584,14 @@
         "        return output\n",
         "\n",
         "    if VAL_AMP:\n",
-        "        with torch.cuda.amp.autocast():\n",
+        "        with torch.amp.autocast('cuda'):\n",
         "            return _compute(input)\n",
         "    else:\n",
         "        return _compute(input)\n",
         "\n",
         "\n",
         "# use amp to accelerate training\n",
-        "scaler = torch.cuda.amp.GradScaler()\n",
+        "scaler = torch.amp.GradScaler('cuda')\n",
         "# enable cuDNN benchmark\n",
         "torch.backends.cudnn.benchmark = True"
       ]
@@ -611,11 +615,12 @@
         "metric_values_wt = []\n",
         "metric_values_et = []\n",
         "\n",
+        "logger.debug(\"Beginning training...\")\n",
         "total_start = time.time()\n",
         "for epoch in range(max_epochs):\n",
         "    epoch_start = time.time()\n",
-        "    print(\"-\" * 10)\n",
-        "    print(f\"epoch {epoch + 1}/{max_epochs}\")\n",
+        "    logger.info(\"-\" * 10)\n",
+        "    logger.info(f\"epoch {epoch + 1}/{max_epochs}\")\n",
         "    model.train()\n",
         "    epoch_loss = 0\n",
         "    step = 0\n",
@@ -627,7 +632,7 @@
         "            batch_data[\"mask\"].to(device),\n",
         "        )\n",
         "        optimizer.zero_grad()\n",
-        "        with torch.cuda.amp.autocast():\n",
+        "        with torch.amp.autocast('cuda'):\n",
         "            outputs_gt = inputs.clone()\n",
         "            inputs = inputs*~mask[:,:,None,None,None]\n",
         "            outputs = model(inputs)\n",
@@ -636,7 +641,7 @@
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
         "        epoch_loss += loss.item()\n",
-        "        print(\n",
+        "        logger.info(\n",
         "            f\"{step}/{len(train_loader)}\"\n",
         "            f\", train_loss: {loss.item():.4f}\"\n",
         "            f\", step time: {(time.time() - step_start):.4f}\"\n",
@@ -644,7 +649,7 @@
         "    lr_scheduler.step()\n",
         "    epoch_loss /= step\n",
         "    epoch_loss_values.append(epoch_loss)\n",
-        "    print(f\"epoch {epoch + 1} average loss: {epoch_loss:.4f}\")\n",
+        "    logger.info(f\"epoch {epoch + 1} average loss: {epoch_loss:.4f}\")\n",
         "\n",
         "    if (epoch + 1) % val_interval == 0:\n",
         "        model.eval()\n",
@@ -678,13 +683,16 @@
         "                    model.state_dict(),\n",
         "                    os.path.join(save_dir, \"best_metric_model.pth\"),\n",
         "                )\n",
-        "                print(\"saved new best metric model\")\n",
-        "            print(\n",
+        "                logger.info(\"saved new best metric model\")\n",
+        "                # Save the loss list\n",
+        "                np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
+        "                np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
+        "            logger.info(\n",
         "                f\"current epoch: {epoch + 1} current mean mse: {metric:.4f}\"\n",
         "                f\"\\nbest mean metric: {best_metric:.4f}\"\n",
         "                f\" at epoch: {best_metric_epoch}\"\n",
         "            )\n",
-        "    print(f\"time consuming of epoch {epoch + 1} is: {(time.time() - epoch_start):.4f}\")\n",
+        "    logger.info(f\"time consuming of epoch {epoch + 1} is: {(time.time() - epoch_start):.4f}\")\n",
         "total_time = time.time() - total_start"
       ]
     },
@@ -697,7 +705,7 @@
       },
       "outputs": [],
       "source": [
-        "print(f\"train completed, best_metric: {best_metric:.4f} at epoch: {best_metric_epoch}, total time: {total_time}.\")"
+        "logger.info(f\"train completed, best_metric: {best_metric:.4f} at epoch: {best_metric_epoch}, total time: {total_time}.\")"
       ]
     },
     {
@@ -709,7 +717,8 @@
         "# Save the loss list\n",
         "np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
         "np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
-        "del epoch_loss_values, metric_values"
+        "del epoch_loss_values, metric_values\n",
+        "logger.debug(\"training loss info saved\")"
       ]
     },
     {
