fixed bug: validation metric best model saving

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -48,16 +48,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 1\n",
+        "run_id = 2\n",
         "DO_MASK = False\n",
         "SET_VARIANCE = False\n",
-        "PIXEL_DOWNSAMPLE = [4, 4, 4]\n",
-        "max_epochs = 400\n",
+        "PIXEL_DOWNSAMPLE = [2, 2, 2]\n",
+        "max_epochs = 100\n",
         "val_interval = 10\n",
         "TRAIN_RATIO = 0.8\n",
+        "TRAIN_DATA_SIZE = 100\n",
         "RANDOM_SEED = 0\n",
         "root_dir = \"/scratch1/sachinsa/monai_data_1\"\n",
-        "use_sample = True\n",
         "\n",
         "logger.info(\"PARAMETERS\\n-----------------\")\n",
         "logger.info(f\"run_id: {run_id}\")\n",
@@ -293,7 +293,7 @@
         "            mode=(\"bilinear\", \"nearest\"),\n",
         "        ),\n",
         "        RandSpatialCrop(roi_size=crop_size, random_size=False),\n",
-        "        Resize(spatial_size=resize_size),\n",
+        "        Resize(spatial_size=resize_size, mode='nearest'),\n",
         "        RandFlip(prob=0.5, spatial_axis=0),\n",
         "        RandFlip(prob=0.5, spatial_axis=1),\n",
         "        RandFlip(prob=0.5, spatial_axis=2),\n",
@@ -314,7 +314,7 @@
         "            mode=(\"bilinear\", \"nearest\"),\n",
         "        ),\n",
         "        CenterSpatialCrop(roi_size=crop_size), # added this because model was not handling 155dims\n",
-        "        Resize(spatial_size=resize_size),\n",
+        "        Resize(spatial_size=resize_size, mode='nearest'),\n",
         "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
         "    ]\n",
         ")"
@@ -420,16 +420,17 @@
         "train_dataset.dataset.transform = train_transform\n",
         "val_dataset.dataset.transform = val_transform\n",
         "\n",
-        "if use_sample:\n",
-        "    train_dataset = Subset(train_dataset, list(range(20)))\n",
-        "    val_dataset = Subset(train_dataset, list(range(5)))\n",
+        "if TRAIN_DATA_SIZE:\n",
+        "    train_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE)))\n",
+        "    val_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE//4)))\n",
         "\n",
         "logger.debug(\"Data loading...\")\n",
         "\n",
         "# Create data loaders\n",
-        "BATCHSIZE_TRAIN, BATCHSIZE_VAL = 4, 2\n",
-        "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True)\n",
-        "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False)\n",
+        "BATCHSIZE_TRAIN, BATCHSIZE_VAL = 2, 2\n",
+        "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True,\n",
+        "    num_workers=8)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)\n",
         "\n",
         "logger.debug(\"Data loaded\")\n",
         "logger.debug(f\"Length of dataset: {len(train_dataset)}, {len(val_dataset)}\")\n",
@@ -457,7 +458,7 @@
         "# pick one image from DecathlonDataset to visualize and check the 4 channels\n",
         "if is_notebook():\n",
         "    channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
-        "    val_data_example = val_dataset[6]['image']\n",
+        "    val_data_example = val_dataset[0]['image']\n",
         "    _, im_length, im_width, im_height = val_data_example.shape\n",
         "    logger.debug(f\"image shape: {val_data_example.shape}\")\n",
         "    plt.figure(\"image\", (24, 6))\n",
@@ -624,8 +625,9 @@
         "    model.train()\n",
         "    epoch_loss = 0\n",
         "    step = 0\n",
+        "    step_start = time.time()\n",
         "    for batch_data in train_loader:\n",
-        "        step_start = time.time()\n",
+        "        data_loaded_time = time.time() - step_start\n",
         "        step += 1\n",
         "        inputs, mask = (\n",
         "            batch_data[\"image\"].to(device),\n",
@@ -644,8 +646,10 @@
         "        logger.info(\n",
         "            f\"{step}/{len(train_loader)}\"\n",
         "            f\", train_loss: {loss.item():.4f}\"\n",
-        "            f\", step time: {(time.time() - step_start):.4f}\"\n",
+        "            f\", data-load time: {(data_loaded_time):.4f}\"\n",
+        "            f\", total-step time: {(time.time() - step_start):.4f}\"\n",
         "        )\n",
+        "        step_start = time.time()\n",
         "    lr_scheduler.step()\n",
         "    epoch_loss /= step\n",
         "    epoch_loss_values.append(epoch_loss)\n",
@@ -667,7 +671,7 @@
         "                mse_metric(y_pred=val_outputs, y=val_outputs_gt)\n",
         "                mse_metric_batch(y_pred=val_outputs, y=val_outputs_gt)\n",
         "\n",
-        "            metric = mse_metric.aggregate().item()\n",
+        "            metric = 1-mse_metric.aggregate().item()\n",
         "            metric_values.append(metric)\n",
         "            metric_batch = mse_metric_batch.aggregate()\n",
         "            mse_metric.reset()\n",
@@ -684,9 +688,10 @@
         "                    os.path.join(save_dir, \"best_metric_model.pth\"),\n",
         "                )\n",
         "                logger.info(\"saved new best metric model\")\n",
-        "                # Save the loss list\n",
-        "                np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
-        "                np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
+        "                \n",
+        "            # Save the loss list\n",
+        "            np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
+        "            np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
         "            logger.info(\n",
         "                f\"current epoch: {epoch + 1} current mean mse: {metric:.4f}\"\n",
         "                f\"\\nbest mean metric: {best_metric:.4f}\"\n",
@@ -719,29 +724,6 @@
         "np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
         "del epoch_loss_values, metric_values\n",
         "logger.debug(\"training loss info saved\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Zt9PmngFKX7V"
-      },
-      "source": [
-        "## Cleanup data directory\n",
-        "\n",
-        "Remove directory if a temporary was used."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "gcK1sIkiKX7W"
-      },
-      "outputs": [],
-      "source": [
-        "if directory is None:\n",
-        "    shutil.rmtree(root_dir)"
       ]
     }
   ],
