--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 1 # set this to prevent overlapped saving of model and data"
+    "run_id = 2 # set this to prevent overlapped saving of model and data"
    ]
   },
   {
@@ -143,7 +143,7 @@
     "    plt.show()\n",
     "\n",
     "plt.figure(\"val\", (6, 4))\n",
-    "plt.title(\"Validation: MSE\", fontsize=20)\n",
+    "plt.title(\"Validation: 1-MSE\", fontsize=20)\n",
     "x_val = [val_interval * (i + 1) for i in range(len(metric_values))]\n",
     "y_val = metric_values\n",
     "plt.xlabel(\"epoch\", fontsize=15)\n",
