--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 8 # set this to prevent overlapped saving of model and data"
+    "run_id = 40 # set this to prevent overlapped saving of model and data"
    ]
   },
   {
@@ -30,16 +30,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import shutil\n",
     "import tempfile\n",
-    "import time\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n",
     "\n",
     "import pdb\n",
-    "import os\n",
     "import numpy as np\n",
-    "import json"
+    "import pickle\n",
+    "from dataset import BrainMRIDataset"
    ]
   },
   {
@@ -73,8 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_loss_values = np.load(os.path.join(load_dir, 'epoch_loss_values.npy')).tolist()\n",
-    "metric_values = np.load(os.path.join(load_dir, 'metric_values.npy')).tolist()"
+    "# epoch_loss_values = np.load(os.path.join(load_dir, 'epoch_loss_values.npy')).tolist()\n",
+    "# metric_values = np.load(os.path.join(load_dir, 'metric_values.npy')).tolist()\n",
+    "with open(os.path.join(load_dir, 'training_data.pkl'), 'rb') as f:\n",
+    "    training_data = pickle.load(f)\n",
+    "    epoch_loss_values = training_data['epoch_loss_values']\n",
+    "    metric_values = training_data['metric_values']"
    ]
   },
   {
@@ -122,16 +123,16 @@
     "    x = [i + 1 for i in range(len(epoch_loss_values))]\n",
     "    y = epoch_loss_values\n",
     "    plt.xlabel(\"epoch\", fontsize=15)\n",
-    "    plt.ylabel(\"loss - log\", fontsize=15)\n",
-    "    plt.yscale('log')\n",
+    "    plt.ylabel(\"loss\", fontsize=15)\n",
+    "    # plt.ylabel(\"loss - log\", fontsize=15)\n",
+    "    # plt.yscale('log')\n",
     "    plt.plot(x, y, color=\"red\")\n",
-    "    plt.suptitle(\"Training: Gaussian Log Likelihood Loss\", fontsize=20)\n",
+    "    plt.suptitle(\"Training: GLL Loss\", fontsize=20)\n",
     "\n",
     "    k = 2\n",
-    "    for zoom in [10,20]:\n",
+    "    for zoom in [20, 200]:\n",
     "        if len(x) > zoom:\n",
     "            plt.subplot(1, 3, k)\n",
-    "            # plt.title(f\"Epoch Average Loss (from ep. {zoom})\")\n",
     "            x = [i + 1 for i in range(len(epoch_loss_values))]\n",
     "            y = epoch_loss_values\n",
     "            plt.ylabel(\"loss\", fontsize=15)\n",
@@ -172,10 +173,8 @@
     "    LoadImage,\n",
     "    NormalizeIntensity,\n",
     "    Orientation,\n",
-    "    RandFlip,\n",
-    "    RandScaleIntensity,\n",
-    "    RandShiftIntensity,\n",
-    "    RandSpatialCrop,\n",
+    "    CenterSpatialCrop,\n",
+    "    Resize,\n",
     "    Spacing,\n",
     "    EnsureType,\n",
     "    EnsureChannelFirst,\n",
@@ -211,7 +210,7 @@
     "        return output\n",
     "\n",
     "    if VAL_AMP:\n",
-    "        with torch.cuda.amp.autocast():\n",
+    "        with torch.amp.autocast('cuda'):\n",
     "            return _compute(input)\n",
     "    else:\n",
     "        return _compute(input)"
@@ -223,9 +222,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_transform = Compose(\n",
+    "PIXEL_DOWNSAMPLE = [2, 2, 2]\n",
+    "crop_size = [224, 224, 144]\n",
+    "resize_size = [crop_size[i]//PIXEL_DOWNSAMPLE[i] for i in range(len(crop_size))]\n",
+    "\n",
+    "val_transform = Compose(\n",
     "    [\n",
-    "        # load 4 Nifti images and stack them together\n",
     "        LoadImage(),\n",
     "        EnsureChannelFirst(),\n",
     "        EnsureType(),\n",
@@ -234,13 +236,9 @@
     "            pixdim=(1.0, 1.0, 1.0),\n",
     "            mode=(\"bilinear\", \"nearest\"),\n",
     "        ),\n",
-    "        RandSpatialCrop(roi_size=[224, 224, 144], random_size=False),\n",
-    "        RandFlip(prob=0.5, spatial_axis=0),\n",
-    "        RandFlip(prob=0.5, spatial_axis=1),\n",
-    "        RandFlip(prob=0.5, spatial_axis=2),\n",
+    "        CenterSpatialCrop(roi_size=crop_size), # added this because model was not handling 155dims\n",
+    "        Resize(spatial_size=resize_size, mode='nearest'),\n",
     "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
-    "        RandScaleIntensity(factors=0.1, prob=1.0),\n",
-    "        RandShiftIntensity(offsets=0.1, prob=1.0),\n",
     "    ]\n",
     ")"
    ]
@@ -251,40 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BrainMRIDataset(Dataset):\n",
-    "    def __init__(self, root_dir, transform=None):\n",
-    "        self.root_dir = os.path.join(root_dir, \"Task01_BrainTumour\")\n",
-    "        json_file_path = os.path.join(self.root_dir, \"dataset.json\")\n",
-    "        with open(json_file_path, 'r') as file:\n",
-    "            data_json = json.load(file)\n",
-    "\n",
-    "        self.image_filenames = data_json['training']\n",
-    "\n",
-    "        np.random.seed(0)\n",
-    "        self.seq_mask = np.random.rand(len(self.image_filenames), 4) < 0.2\n",
-    "\n",
-    "        self.transform = transform\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        \"\"\"Returns the total number of samples in the dataset.\"\"\"\n",
-    "        return len(self.image_filenames)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        img_name = os.path.normpath(os.path.join(self.root_dir,self.image_filenames[idx]['image']))\n",
-    "        mask = self.seq_mask[idx]\n",
-    "        \n",
-    "        if self.transform:\n",
-    "            image = self.transform(img_name)\n",
-    "\n",
-    "        mask = torch.from_numpy(mask)\n",
-    "\n",
-    "        return {\"image\":image, \"mask\":mask}\n",
-    "    \n",
-    "\n",
-    "\n",
-    "sample_ds = BrainMRIDataset(\n",
+    "all_dataset = BrainMRIDataset(\n",
     "    root_dir=root_dir,\n",
-    "    transform=train_transform\n",
+    "    transform = val_transform\n",
     ")"
    ]
   },
@@ -294,15 +261,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GaussianLikelihood(expected_img, output_img):\n",
-    "    output_img_mean = output_img[:, :4, ...]\n",
-    "    output_img_log_std = output_img[:, 4:, ...]\n",
+    "model.load_state_dict(torch.load(os.path.join(load_dir, \"best_metric_model.pth\"), weights_only=True))\n",
+    "model.eval()\n",
+    "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
     "\n",
-    "    cost1 = (expected_img - output_img_mean)**2 / (2*torch.exp(2*output_img_log_std))\n",
-    "\n",
-    "    cost2 = output_img_log_std\n",
-    "\n",
-    "    return torch.mean(cost1 + cost2)"
+    "with torch.no_grad():\n",
+    "    this_input = all_dataset[0]\n",
+    "    input_image = this_input[\"image\"].unsqueeze(0).to(device)\n",
+    "    # input_mask = [True, False, True, False]\n",
+    "    # input_image[:, input_mask, ...] = 0\n",
+    "    this_output = inference(input_image)"
    ]
   },
   {
@@ -311,28 +279,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(os.path.join(load_dir, \"best_metric_model.pth\")))\n",
-    "model.eval()\n",
-    "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
+    "_, _, im_length, im_width, im_height = input_image.shape\n",
+    "h_index = im_height//2\n",
     "\n",
     "def plot_brain(index, label):\n",
     "    start_index = None\n",
     "    title = \"\"\n",
-    "    _, _, im_length, im_width, im_height = val_input.shape\n",
-    "    h_index = im_height//2\n",
     "\n",
     "    if label == \"input\":\n",
     "        start_index = 0\n",
     "        title = \"Input\"\n",
-    "        brain_slice = val_input[0, index, :, :, h_index]\n",
+    "        brain_slice = input_image[0, index, :, :, h_index]\n",
     "    elif label == \"mean\":\n",
     "        start_index = 4\n",
     "        title = \"Output: \" + r\"$\\mu$\"\n",
-    "        brain_slice = val_output[0, index, :, :, h_index]\n",
-    "    elif label == \"logstd\":\n",
+    "        brain_slice = this_output[0, index, :, :, h_index]\n",
+    "    elif label == \"var\":\n",
     "        start_index = 8\n",
-    "        title = \"Output: log(\" + r\"$\\sigma$\" + \")\"\n",
-    "        brain_slice = val_output[0, index+4, :, :, h_index]\n",
+    "        title = \"Output: \" + r\"$\\sigma$\" + \"\"\n",
+    "        brain_slice = this_output[0, index+4, :, :, h_index]\n",
+    "        brain_slice = torch.exp(brain_slice)\n",
+    "        var_threshold = torch.quantile(brain_slice.float(), 0.9).item()\n",
+    "        brain_slice[brain_slice >= var_threshold] = var_threshold\n",
     "    plt.subplot(3, 4, start_index + index + 1)\n",
     "    if label == \"input\":\n",
     "        plt.title(channels[i], fontsize=30)\n",
@@ -343,25 +311,18 @@
     "        plt.ylabel(title, fontsize=30)\n",
     "    plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
     "    plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
-    "    cbar = plt.colorbar() #shrink=0.6)\n",
+    "    cbar = plt.colorbar(shrink=0.7)\n",
     "    cbar.ax.tick_params(labelsize=20)\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    val_input = sample_ds[6][\"image\"].unsqueeze(0).to(device)\n",
-    "    mask_indices = [True, False, True, False]\n",
-    "    val_input[:, mask_indices, ...] = 0\n",
-    "    val_output = inference(val_input)\n",
+    "plt.figure(\"image\", (24, 18))\n",
+    "for i in range(4):\n",
+    "    plot_brain(i, \"input\")\n",
+    "for i in range(4):\n",
+    "    plot_brain(i, \"mean\")\n",
+    "for i in range(4):\n",
+    "    plot_brain(i, \"var\")\n",
     "\n",
-    "\n",
-    "    plt.figure(\"image\", (24, 18))\n",
-    "    for i in range(4):\n",
-    "        plot_brain(i, \"input\")\n",
-    "    for i in range(4):\n",
-    "        plot_brain(i, \"mean\")\n",
-    "    for i in range(4):\n",
-    "        plot_brain(i, \"logstd\")\n",
-    "\n",
-    "plt.suptitle(\"\")\n",
+    "plt.suptitle(f\"{this_input['id']} (h={h_index}/{im_height})\", fontsize=20)\n",
     "plt.tight_layout()\n",
     "plt.savefig(os.path.join(fig_save_dir, \"model_inference.png\"), facecolor='white')\n",
     "plt.show()"
