updated continue-training code

--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 40 # set this to prevent overlapped saving of model and data"
+    "run_id = 11 # set this to prevent overlapped saving of model and data"
    ]
   },
   {
@@ -268,8 +268,8 @@
     "with torch.no_grad():\n",
     "    this_input = all_dataset[0]\n",
     "    input_image = this_input[\"image\"].unsqueeze(0).to(device)\n",
-    "    # input_mask = [True, False, True, False]\n",
-    "    # input_image[:, input_mask, ...] = 0\n",
+    "    input_mask = [True, False, True, False]\n",
+    "    input_image[:, input_mask, ...] = 0\n",
     "    this_output = inference(input_image)"
    ]
   },
