--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -63,18 +63,18 @@
         "root_dir = \"/scratch1/sachinsa/monai_data_1\"\n",
         "\n",
         "logger.info(\"PARAMETERS\\n-----------------\")\n",
-        "logger.info(\"run_id: {run_id}\")\n",
-        "logger.info(\"DO_MASK: {DO_MASK}\")\n",
-        "logger.info(\"SET_VARIANCE: {SET_VARIANCE}\")\n",
-        "logger.info(\"max_epochs: {max_epochs}\")\n",
-        "logger.info(\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
-        "logger.info(\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
-        "logger.info(\"PIXEL_DOWNSAMPLE: {PIXEL_DOWNSAMPLE}\")\n",
-        "logger.info(\"val_interval: {val_interval}\")\n",
-        "logger.info(\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
-        "logger.info(\"RANDOM_SEED: {RANDOM_SEED}\")\n",
-        "logger.info(\"CONTINUE_TRAINING: {CONTINUE_TRAINING}\")\n",
-        "logger.info(\"TRAIN_DATA_SHUFFLE: {TRAIN_DATA_SHUFFLE}\")\n",
+        "logger.info(f\"run_id: {run_id}\")\n",
+        "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
+        "logger.info(f\"SET_VARIANCE: {SET_VARIANCE}\")\n",
+        "logger.info(f\"max_epochs: {max_epochs}\")\n",
+        "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
+        "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
+        "logger.info(f\"PIXEL_DOWNSAMPLE: {PIXEL_DOWNSAMPLE}\")\n",
+        "logger.info(f\"val_interval: {val_interval}\")\n",
+        "logger.info(f\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
+        "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
+        "logger.info(f\"CONTINUE_TRAINING: {CONTINUE_TRAINING}\")\n",
+        "logger.info(f\"TRAIN_DATA_SHUFFLE: {TRAIN_DATA_SHUFFLE}\")\n",
         "logger.info(f\"root_dir: {root_dir}\")\n",
         "print(\"\")"
       ]
@@ -306,8 +306,6 @@
         "    train_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE)))\n",
         "    val_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE//4)))\n",
         "\n",
-        "logger.debug(\"Data loading...\")\n",
-        "\n",
         "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
         "\n",
         "# Create data loaders\n",
@@ -433,8 +431,7 @@
         "        log_std = torch.zeros_like(outputs_mean) # sigma = 1\n",
         "    else:\n",
         "        log_std = outputs[:, 4:, ...]\n",
-        "        # eps = np.log(1e-6)/2 # -6.9\n",
-        "        eps = np.log(1e-9)/2 # -6.9\n",
+        "        eps = np.log(1e-6)/2 # -6.9\n",
         "\n",
         "        # TODO: should the clamping be with or without autograd?\n",
         "        log_std = log_std.clone()\n",
@@ -455,13 +452,10 @@
       },
       "outputs": [],
       "source": [
-        "VAL_AMP = True\n",
-        "\n",
         "# Define the loss function\n",
         "loss_function = GaussianNLLLoss_custom\n",
         "optimizer = torch.optim.Adam(model.parameters(), 1e-4, weight_decay=1e-5)\n",
         "lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=max_epochs)\n",
-        "\n",
         "mse_metric = MSEMetric(reduction=\"mean\")\n",
         "\n",
         "epoch_loss_values = []\n",
@@ -473,10 +467,7 @@
         "        output = model(input)\n",
         "        return output\n",
         "\n",
-        "    if VAL_AMP:\n",
-        "        with torch.amp.autocast('cuda'):\n",
-        "            return _compute(input)\n",
-        "    else:\n",
+        "    with torch.amp.autocast('cuda'):\n",
         "        return _compute(input)\n",
         "\n",
         "\n",
@@ -494,10 +485,13 @@
       "source": [
         "ep_start = 1\n",
         "if CONTINUE_TRAINING:\n",
-        "    model.load_state_dict(torch.load(os.path.join(save_dir, \"best_metric_model.pth\"), weights_only=True))\n",
-        "    epoch_loss_values = np.load(os.path.join(save_dir, 'epoch_loss_values.npy')).tolist()\n",
-        "    metric_values = np.load(os.path.join(save_dir, 'metric_values.npy')).tolist()\n",
-        "    ep_start = 121"
+        "    load_dir = save_dir\n",
+        "    model.load_state_dict(torch.load(os.path.join(load_dir, \"best_metric_model.pth\"), weights_only=True))\n",
+        "    with open(os.path.join(load_dir, 'training_data.pkl'), 'rb') as f:\n",
+        "        training_data = pickle.load(f)\n",
+        "        epoch_loss_values = training_data['epoch_loss_values']\n",
+        "        metric_values = training_data['metric_values']\n",
+        "        ep_start = training_data['epoch']"
       ]
     },
     {
@@ -539,32 +533,22 @@
         "            for name, param in model.named_parameters():\n",
         "                if param.grad is not None and torch.isnan(param.grad).any():\n",
         "                    print(f\"NaN found in gradient of parameter: {name}\")\n",
-        "                    pdb.set_trace()\n",
-        "            outputs = model(inputs)\n",
-        "\n",
-        "            # outputs_main = outputs[:, :4, ...]\n",
-        "            # log_std = outputs[:, 4:, ...]\n",
-        "            # eps = np.log(1e-6)/2\n",
-        "            # log_std[log_std < eps] = eps\n",
-        "            # variance = torch.exp(2*log_std)\n",
-        "            # if not SET_VARIANCE:\n",
-        "            #     variance = torch.ones_like(variance) # sigma = 1\n",
-        "            # loss = loss_function(outputs_main, target, variance)\n",
-        "            \n",
+        "                    exit()\n",
+        "            outputs = model(inputs)            \n",
         "            loss = loss_function(outputs, target)\n",
         "\n",
         "            if np.isnan(loss.item()):\n",
         "                logger.warning(\"nan value encountered (1)!\")\n",
-        "                pdb.set_trace()\n",
+        "                exit()\n",
         "        scaler.scale(loss).backward()\n",
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
         "        if epoch > 10 and loss.item() > 1e5:\n",
         "            logger.warning(f\"large loss encountered: {loss.item()}!\")\n",
-        "            pdb.set_trace()\n",
+        "            exit()\n",
         "        if np.isnan(loss.item()):\n",
         "            logger.warning(\"nan value encountered (2)!\")\n",
-        "            pdb.set_trace()\n",
+        "            exit()\n",
         "        epoch_loss += loss.item()\n",
         "        logger.info(\n",
         "            f\"{step}/{len(train_loader)}\"\n",
@@ -618,8 +602,6 @@
         "                    'epoch_loss_values': epoch_loss_values,\n",
         "                    'metric_values': metric_values,\n",
         "                }, f)\n",
-        "            # np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
-        "            # np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
         "            logger.info(\n",
         "                f\"current epoch: {epoch} current mean mse: {metric:.4f}\"\n",
         "                f\" best mean metric: {best_metric:.4f}\"\n",
@@ -640,19 +622,6 @@
       "source": [
         "logger.info(f\"train completed, best_metric: {best_metric:.4f} at epoch: {best_metric_epoch}\")\n",
         "logger.info(f\"Training time: {total_time//max_epochs:.1f}s/ep (total: {total_time//3600:.0f}h {(total_time//60)%60:.0f}m)\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Save the loss list\n",
-        "np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
-        "np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
-        "del epoch_loss_values, metric_values\n",
-        "logger.debug(\"training loss info saved\")"
       ]
     }
   ],
